# kubvernor

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  Cargo.toml  LICENSE  README.md  README_INFERENCE.md  clear_all_inference_tests.sh  clear_all_tests.sh  clippy.toml  run_conformance_tests.sh  run_inference_conformance_tests.sh  run_kubvernor.sh  run_kubvernor_inference.sh  taplo.toml
.github/workflows/: .#envoy_conformance.yaml  conformance_workflow.yaml  docker-image.yml  main.yml  (+4 more)
assets/: kubvernor.architecture.drawio
conformance/: GATEWAY_API_CONFORMANCE.md  GATEWAY_API_INFERENCE_EXTENSION_CONFORMANCE.md  compliance_test.txt  go.mod  go.sum  kubernor-conformance-output-1.2.0.yaml  kubernor-conformance-output-1.2.1.yaml  kubvernor-conformance-output-1.2.1.yaml  kubvernor-gateway-conformance-report-1.4.0-agentgateway.yaml  kubvernor-gateway-conformance-report-1.4.0-envoy.yaml  kubvernor-gateway-conformance-report-1.4.0-orionproxy.yaml  kubvernor-inference-conformance-report-1.1.0-agentgateway.yaml  kubvernor-inference-conformance-report-1.1.0-envoy.yaml  kubvernor-inference-conformance-report-1.1.0-orionproxy.yaml
docker/: #Dockerfile#  Dockerfile  Dockerfile_dev  Dockerfile_local
kubernetes/: kubvernor-config.yaml  kubvernor-crds.yaml  kubvernor-deployment.yaml  kubvernor-hello-inference-world.yaml  kubvernor-hello-world.yaml
kubvernor/: Cargo.toml  conformance
kubvernor-admin/: Cargo.toml
kubvernor-admin/src/: lib.rs
kubvernor-api/: Cargo.toml
kubvernor-common/: Cargo.toml
kubvernor-common/src/: configuration.rs  lib.rs  resource_key.rs
kubvernor-controller/: Cargo.toml
kubvernor-controller/src/: lib.rs  main.rs  state.rs
kubvernor-controller/src/backends/: mod.rs
kubvernor-controller/src/backends/agentgateway/: agentgateway_deployer.rs  converters.rs  gateway_class_for_inference.yaml  mod.rs  resource_generator.rs  server.rs
kubvernor-controller/src/backends/envoy/: mod.rs
kubvernor-controller/src/backends/envoy/common/: converters.rs  mod.rs  resource_generator.rs
kubvernor-controller/src/backends/envoy/common/route/: grpc_route.rs  http_route.rs  mod.rs  test.rs
kubvernor-controller/src/backends/envoy/envoy_cm_backend/: envoy_deployer.rs  mod.rs  xds_generator.rs
kubvernor-controller/src/backends/envoy/envoy_xds_backend/: envoy_deployer.rs  mod.rs  model.rs  resources.rs  server.rs
kubvernor-controller/src/backends/envoy/envoy_xds_backend/route_converters/: grpc.rs  http.rs  mod.rs
kubvernor-controller/src/backends/envoy/orion_xds_backend/: mod.rs  orion_deployer.rs  server.rs
kubvernor-controller/src/common/: gateway.rs  listener.rs  mod.rs  resource_key.rs  test.rs
kubvernor-controller/src/common/references_resolver/: backends_resolver copy.rs  backends_resolver.rs  mod.rs  multi_references_resolver.rs  reference_grants_resolver.rs
kubvernor-controller/src/common/references_resolver/secrets_resolver/: mod.rs  reference_resolver.rs  secrets_resolver.rs
kubvernor-controller/src/common/route/: grpc_route.rs  http_route.rs  mod.rs
kubvernor-controller/src/controllers/: gateway.rs  gateway_class.rs  inference_pool.rs  mod.rs
kubvernor-controller/src/controllers/handlers/: mod.rs  resource_handler.rs
kubvernor-controller/src/controllers/route/: grpc_route.rs  http_route.rs  mod.rs  routes_common.rs
kubvernor-controller/src/controllers/utils/: hostname_match_filter.rs  mod.rs  route_listener_matcher.rs  routes_resolver.rs  tls_config_validator.rs
kubvernor-controller/src/services/: mod.rs
kubvernor-controller/src/services/gateway_deployer/: gateway_deployer_internal.rs  gateway_processed_handler.rs  mod.rs
kubvernor-controller/src/services/patchers/: gateway_class_patcher.rs  gateway_patcher.rs  grpc_route_patcher.rs  http_route_patcher.rs  inference_pool_patcher.rs  mod.rs  patcher.rs
kubvernor-controller/src/services/reference_resolver/: mod.rs
kubvernor-state/: Cargo.toml
kubvernor-state/src/: inmemory.rs  lib.rs  memory.rs
kubvernor/src/: main.rs
kubvernor/src/backends/agentgateway/: resource_generator.rs
kubvernor/src/backends/envoy/common/: resource_generator.rs
kubvernor/src/backends/envoy/envoy_cm_backend/: envoy_deployer.rs
kubvernor/src/backends/envoy/orion_xds_backend/: server.rs
kubvernor/src/common/: listener.rs  resource_key.rs
kubvernor/src/controllers/: gateway.rs
kubvernor/src/controllers/utils/: hostname_match_filter.rs  routes_resolver.rs
kubvernor/src/services/patchers/: gateway_patcher.rs
releases/: 0.1.0
resources/: README.md  agentgateway.yaml  agentgateway_class.yaml  agentgateway_inference_httproute.yaml  agentgateway_one_route.yaml  agentgateway_route_service_one.yaml  agentgateway_route_service_two.yaml  echo-deployment-2.yaml  echo-deployment.yaml  envoy-bootstrap-long.yaml  envoy-bootstrap.yaml  envoy-config-map.yaml  envoy-deployment.yaml  envoy-inference.yaml  envoy-service.json  envoy.yaml  gateway_class.yaml  gateway_class_for_inference.yaml  gateway_one.yaml  gateway_two.yaml  inference-gateway.yaml  inference-model-server-cpu.yaml  inference-resources.yaml  inference_pool_tests.yaml  inference_pool_tests_gateways.yaml  inference_test_primary_route.yaml  inference_test_secondary_route.yaml  kubvernor_configuration_crd.yaml  lds.yaml  orion-gateway.yaml  rds.yaml  route-three.yaml  route_one.yaml  route_three.yaml  route_two.yaml  ubuntu-service.yaml
scripts/: clear_kind.sh  create_cluster.sh  deploy_kubvernor.sh  load_images.sh  run_conformance.sh  run_conformance_agentgateway.sh  run_conformance_orionproxy.sh  run_inference_conformance.sh  run_inference_conformance_agentgateway.sh  run_inference_conformance_orionproxy.sh
src/: common.rs  lib.rs  listener.rs  main.rs  route.rs  state.rs
templates/: agent-gateway-bootstrap-dynamic.yaml.tera  cds.yaml.tera  envoy-bootstap.yaml.tera  envoy-bootstrap-dynamic-with-secrets.yaml.tera  envoy-bootstrap-dynamic.yaml.tera  envoy-bootstrap.yaml.tera  lds.yaml.tera  orion-bootstrap-dynamic-with-secrets.yaml.tera  orion-bootstrap-dynamic.yaml.tera  orion-config.yaml.tera  rds.yaml.tera
(+117 files in other folders)
