[workspace]
members = ["kubvernor", "kubvernor-admin", "kubvernor-controller"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.91.1"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"


[profile.release-debuginfo]
debug = "full"
inherits = "release"
panic = "abort"
split-debuginfo = "packed"
strip = false

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
#struct_field_names = "allow"
clone_on_ref_ptr = "warn"
disallowed-methods = "deny"
doc_markdown = "allow"
get_unwrap = "warn"
if_then_some_else_none = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
print_stderr = "warn"
print_stdout = "warn"
str_to_string = "warn"
string_to_string = "warn"
todo = "warn"
unwrap_used = "warn"
cast_sign_loss = "allow"
