[workspace]
members = ["kubvernor", "kubvernor-admin", "kubvernor-common", "kubvernor-controller", "kubvernor-state"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.91.1"
license-file= "./LICENSE"

[workspace.dependencies]
kubvernor-controller = { path = "./kubvernor-controller"}
kubvernor-common = { path = "./kubvernor-common"}
kubvernor-state = { path = "./kubvernor-state"}
atomic-take = "1.1.0"
futures = "0.3"
envoy-api-rs = { version = "0.1.1", git = "https://github.com/kubvernor/envoy-api-rs", branch = "main" }
gateway-api = { version = "0.19.0", git = "https://github.com/kubvernor/gateway-api-rs", branch = "main" }
k8s-openapi = { version = "0.26", features = ["v1_32", "schemars"] }
kube = { version = "2", features = ["runtime", "client", "derive", "http-proxy"] }
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
kube-core = "2"
env_logger = "0.11.8"
uuid = { version = "1.18.1", features = ["v4"] }
async-trait = "0.1.89"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
itertools = "0.14"
tera = "1.20"
rustls-pki-types = "1.13"
eater_domainmatcher = "0.1.2"
typed-builder = "0.23"
tracing-opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
cfg-if = "1.0"
tokio-stream = "0.1.17"
gateway-api-inference-extension = { version = "1.1.0", git = "https://github.com/kubvernor/gateway-api-inference-extension-rs.git" }
multiset = "0.0.5"
agentgateway-api-rs = { version = "0.11.0", git = "https://github.com/kubvernor/agentgateway-api-rs" }
kubvernor-api = { version = "0.2.0", git = "https://github.com/kubvernor/kubvernor-api-rs" }
serde_yaml = "0.9"
lru_time_cache = "0.11"
tower-test = "0.4"
http = "1.3"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"


[profile.release-debuginfo]
debug = "full"
inherits = "release"
panic = "abort"
split-debuginfo = "packed"
strip = false

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
#struct_field_names = "allow"
clone_on_ref_ptr = "warn"
disallowed-methods = "deny"
doc_markdown = "allow"
get_unwrap = "warn"
if_then_some_else_none = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
print_stderr = "warn"
print_stdout = "warn"
str_to_string = "warn"
string_to_string = "warn"
todo = "warn"
unwrap_used = "warn"
cast_sign_loss = "allow"
