[workspace]
members  = ["kubvernor", "kubvernor-admin", "kubvernor-common", "kubvernor-controller", "kubvernor-state"]
resolver = "3"

[workspace.package]
edition      = "2024"
license-file = "./LICENSE"
rust-version = "1.91.1"
version      = "0.2.0"

[workspace.dependencies]
agentgateway-api-rs             = { version = "0.11.0", git = "https://github.com/kubvernor/agentgateway-api-rs" }
async-trait                     = "0.1.89"
atomic-take                     = "1.1.0"
cfg-if                          = "1.0"
eater_domainmatcher             = "0.1.2"
env_logger                      = "0.11.8"
envoy-api-rs                    = { version = "0.1.1", git = "https://github.com/kubvernor/envoy-api-rs", branch = "main" }
futures                         = "0.3"
gateway-api                     = { version = "0.19.0", git = "https://github.com/kubvernor/gateway-api-rs", branch = "main" }
gateway-api-inference-extension = { version = "1.1.0", git = "https://github.com/kubvernor/gateway-api-inference-extension-rs.git" }
http                            = "1.3"
itertools                       = "0.14"
k8s-openapi                     = { version = "0.26", features = ["schemars", "v1_32"] }
kube                            = { version = "2", features = ["client", "derive", "http-proxy", "runtime"] }
kube-core                       = "2"
kubvernor-api                   = { version = "0.2.0", git = "https://github.com/kubvernor/kubvernor-api-rs" }
kubvernor-common                = { path = "./kubvernor-common" }
kubvernor-controller            = { path = "./kubvernor-controller" }
kubvernor-state                 = { path = "./kubvernor-state" }
lru_time_cache                  = "0.11"
multiset                        = "0.0.5"
opentelemetry                   = "0.31"
opentelemetry-otlp              = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk               = { version = "0.31", features = ["rt-tokio"] }
rustls-pki-types                = "1.13"
schemars                        = "1"
serde                           = { version = "1", features = ["derive"] }
serde_json                      = "1"
serde_yaml                      = "0.9"
tera                            = "1.20"
thiserror                       = "2"
tokio                           = { version = "1.48.0", features = ["full"] }
tokio-stream                    = "0.1.17"
tower-test                      = "0.4"
tracing                         = "0.1"
tracing-appender                = "0.2.3"
tracing-opentelemetry           = "0.32"
tracing-subscriber              = { version = "0.3", features = ["env-filter"] }
typed-builder                   = "0.23"
uuid                            = { version = "1.18.1", features = ["v4"] }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = false
panic            = "abort"
rpath            = false
strip            = "debuginfo"


[profile.release-debuginfo]
debug           = "full"
inherits        = "release"
panic           = "abort"
split-debuginfo = "packed"
strip           = false

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
#struct_field_names = "allow"
cast_sign_loss          = "allow"
clone_on_ref_ptr        = "warn"
disallowed-methods      = "deny"
doc_markdown            = "allow"
get_unwrap              = "warn"
if_then_some_else_none  = "warn"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"
print_stderr            = "warn"
print_stdout            = "warn"
str_to_string           = "warn"
string_to_string        = "warn"
todo                    = "warn"
unwrap_used             = "warn"
