[package]
name = "kubvernor-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kubvernor-common.workspace = true
kubvernor-state.workspace=true
kubvernor-controller.workspace = true
axum = "0.7"
tower = "0.4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }


[lints]
workspace = true
