[package]
edition.workspace      = true
name                   = "kubvernor-admin"
rust-version.workspace = true
version.workspace      = true

[dependencies]
axum                           = "0.7"
kubvernor-common.workspace     = true
kubvernor-controller.workspace = true
kubvernor-state.workspace      = true
serde                          = { workspace = true }
serde_json                     = { workspace = true }
tokio                          = { workspace = true }
tower                          = "0.4"
tracing                        = { workspace = true }


[lints]
workspace = true
