[package]
edition.workspace      = true
name                   = "kubvernor-common"
rust-version.workspace = true
version.workspace      = true

[dependencies]
gateway-api.workspace                     = true
gateway-api-inference-extension.workspace = true
k8s-openapi.workspace                     = true
kube.workspace                            = true
serde.workspace                           = true
thiserror.workspace                       = true
typed-builder.workspace                   = true

[lints]
workspace = true
