[package]
edition.workspace      = true
license-file.workspace = true
name                   = "kubvernor-controller"
rust-version.workspace = true
version.workspace      = true

[dependencies]
async-trait.workspace                     = true
cfg-if.workspace                          = true
eater_domainmatcher.workspace             = true
envoy-api-rs.workspace                    = true
futures.workspace                         = true
gateway-api.workspace                     = true
gateway-api-inference-extension.workspace = true
itertools.workspace                       = true
k8s-openapi.workspace                     = true
kube.workspace                            = true
kube-core.workspace                       = true
kubvernor-common.workspace                = true
kubvernor-state.workspace                 = true
rustls-pki-types.workspace                = true
schemars.workspace                        = true
serde.workspace                           = true
serde_json.workspace                      = true
tera.workspace                            = true
thiserror.workspace                       = true
tokio.workspace                           = true
tokio-stream.workspace                    = true
typed-builder.workspace                   = true
uuid.workspace                            = true
log.workspace                             = true
agentgateway-api-rs = { workspace = true, optional = true }
multiset.workspace  = true
kubvernor-api.workspace  = true
lru_time_cache.workspace = true
serde_yaml.workspace     = true


[dev-dependencies]
http       = "1.3"
tower-test = "0.4"

[features]
agentgateway = ["dep:agentgateway-api-rs"]
default      = ["agentgateway", "envoy_xds", "orion", "standard"]
envoy_cm     = []
envoy_xds    = []
experimental = []
orion        = []
standard     = []


[lints]
workspace = true
