[package]
edition.workspace      = true
name                   = "kubvernor"
rust-version.workspace = true
version.workspace      = true

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
clap_derive = "4.5.49"
futures.workspace = true
kubvernor-admin = { path = "../kubvernor-admin" }
kubvernor-common = { path = "../kubvernor-common" }
kubvernor-controller = { path = "../kubvernor-controller", features = [
  "agentgateway",
  "envoy_xds",
  "orion",
  "standard",
] }
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http.workspace       = true
tower-test.workspace = true

[lints]
workspace = true
